--- a/Odonto-index.html
+++ b/Odonto-index.html
@@ -11,7 +11,7 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Login & Register Form</title>
 
 </head>
@@ -158,8 +158,8 @@
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
 
-<script src="form-change.js"></script>
-<script src="show-pass.js"></script>
-<script src="form-validate.js"></script>
+<script src="js/form-change.js"></script>
+<script src="js/show-pass.js"></script>
+<script src="js/form-validate.js"></script>
 
 </html>
